[project]
name = "ltc-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "P4sTela", email = "p4stela.dev@gmail.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "soundfile>=0.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ltc_generator"]
